tests/fixtures/invalid/pow_set_list_str.py
# Cannot call pow() with Set[int], List[int], Str
x = pow({1, 2, 3}, [1, 2, 3], "hello")
